Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/ItemBonificacao__c.object-meta.xml
<CustomObject>
    <label>Item da bonificação</label>
    <nameField>
        <displayFormat>IBN-{0000000}</displayFormat>
        <label>Número do item da bonificação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da bonificação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>