Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/fields/NumeroBonificacao__c.field-meta.xml
<CustomField>
    <fullName>NumeroBonificacao__c</fullName>
    <label>Número da bonificação</label>
    <referenceTo>Bonificacao__c</referenceTo>
    <relationshipLabel>Itens da bonificação</relationshipLabel>
    <relationshipName>ItensBonificacao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>