Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da bonificação</relationshipLabel>
    <relationshipName>ItensBonificacao</relationshipName>
    <type>Lookup</type>
</CustomField>