Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>