Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/recordTypes/ProdutoBonificado.recordType-meta.xml
<RecordType>
    <fullName>ProdutoBonificado</fullName>
    <active>true</active>
    <description>Tipo de registro para representar os produtos bonificados em uma compra, de acordo com os itens que foram vendidos.</description>
    <label>Produto bonificado</label>
</RecordType>