Git Tests/force-app/main/default/default/objects/ItemBonificacao__c/recordTypes/ProdutoVendido.recordType-meta.xml
<RecordType>
    <fullName>ProdutoVendido</fullName>
    <active>true</active>
    <description>Tipo de registro para os produtos que estão sendo vendido e resultarão em uma bonificação.</description>
    <label>Produto vendido</label>
</RecordType>